--- a/modules/5coolthings/css/main.css
+++ b/modules/5coolthings/css/main.css
@@ -136,14 +136,6 @@ section {
     overflow: hidden;
     clear: both;
 }
-
-h1 { 
-font-size: 2.9em;
-font-weight: 400;
-line-height: .9em;
-letter-spacing: 2px;
-margin: 0;
-}
 h2 { margin: 0; }
 sup {
     font-size: .55em;
@@ -275,13 +267,9 @@ sup {
 .txtg { color: #969696; }
 .txtr { color: #d32431; }
 
-@media only screen and (min-width: 320px) {
-    /* section heights for pc size */
-    
-    header { padding-bottom: 20%; }
-
-    #mobile-power,
-    #mobile-power .inner { min-height: 537px; }
+@media only screen and (max-width: 959px) {
+    /* section heights for mobile? */
+    header { padding-bottom: 75px;  }
 
     .block,
     .block .inner { min-height: 380px; }
@@ -289,11 +277,7 @@ sup {
 
 @media only screen and (min-width: 960px) {
     /* section heights for pc size */
-    
-    header { padding-bottom: 20%; }
-
-    #mobile-power,
-    #mobile-power .inner { min-height: 537px; }
+    header { padding-bottom: 0; height: 532px; }
 
     .block,
     .block .inner { min-height: 380px; }
@@ -355,50 +339,53 @@ sup {
 			position: relative;
 			z-index: 1;
 		}
-    header h1 { 
-        padding-top: 20%;
-        width: 68%;
-    }
-		header h1 strong.big5 {
+		h1 { 
+			font-size: 22px;
+			font-weight: normal;
+			line-height: 150%;
+			letter-spacing: 0;
+			padding-top: 10.5%;
+			width: 100%;
+			margin: 0 auto;
+		}
+		h1 strong.big5 {
 			font-family: "Qualcomm-Semibold";
 			font-weight: normal;
-			font-size: 3em;
-			float: left;
-			width: 125px;
+			font-size: 140px;
+			display: inline-block;
+			margin-right: 15px;
 			position: relative;
-			top: 30px;
 				
 			-webkit-animation:highfive 0.5s ease-in 1.5s backwards;
 			-moz-animation:highfive 0.5s ease-in 1.5s backwards;
 			animation:highfive 0.5s ease-in 1.5s backwards;
 		}
-		header h1 .cool {
-			float: left;
+		h1 .cool {
+			display: inline-block;
 			font-family: "Qualcomm-Regular";
-			font-size: 0.6em;
-			line-height: 1em;
 			position: relative;
 				
 			-webkit-animation:headertxt 0.5s ease-in-out 2s backwards;
 			-moz-animation:headertxt 0.5s ease-in-out 2s backwards;
 			animation:headertxt 0.5s ease-in-out 2s backwards;
 		}
-    header .header-graphic {
-        position: absolute;
-				top: 0;
-				left: 50%;
-        margin-top: 13%;
-				margin-left: 150px;
-        width: 34%;
-        text-align: center;
+    .header-graphic {
+			display: block;
+			margin: 80px auto 0;
+			position: relative;
+			width: 100%;
+			height: auto;
+			text-align: center;
 				
 			-webkit-animation:headergraphic 0.5s ease-in-out 0.5s backwards;
 			-moz-animation:headergraphic 0.5s ease-in-out 0.5s backwards;
 			animation:headergraphic 0.5s ease-in-out 0.5s backwards;
     }
-    #header-tablet {
-        width: 100%;
-    }
+		#main-img {
+			width: 100%;
+			height: auto;
+			margin: 0;
+		}
     #gear1 {
         position: absolute;
         top: 11%;
@@ -428,6 +415,48 @@ sup {
 			border-right: 35px solid transparent;
 			border-top: 35px solid #e92628; 
 		}
+@media only screen and (min-width: 480px) {
+	h1 {
+		font-size: 35px;
+		line-height: 43px;
+	}
+	h1 strong.big5 {
+		font-size: 190px;
+		margin-right: 20px;
+	}
+    .header-graphic {
+			width: 439px;
+			height: 425px;
+		}
+}
+@media only screen and (min-width: 600px) {
+	h1 {
+		font-size: 42px;
+		line-height: 43px;
+		padding-top: 10.5%;
+		width: 530px;
+	}
+}
+@media only screen and (min-width: 960px) {
+	h1 {
+		font-size: 43px;
+		line-height: 44px;
+		padding-top: 178px;
+		margin: 0 0 0 88px;
+	}
+	h1 strong.big5 {
+		font-size: 200px;
+		margin-right: 30px;
+	}
+	.header-graphic {		
+		position: absolute;
+		top: 124px;
+		left: 50%;
+		margin: 0 0 0 132px;
+		width: 319px;
+		height: 306px;
+	}
+}
 /* end header */
 
 /*  1: talking */
