--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -336,9 +336,32 @@ sup {
     margin: auto 5%;
 }
 /* #19 explore */
-#explore {
-	background: url(../img/bg-explore.jpg) no-repeat 0 0;
+.block#explore {
+	background: url(../img/bg-explore.jpg) no-repeat center center;
 	background-size: cover;
+}
+.block#explore,
+.block#explore .inner {
+	min-height: 0;
+}
+.block#explore .text-position.center {
+	padding-top: 12%;
+	padding-bottom: 18%;
+}
+.block#explore .eco {
+	display: block;
+	width: 158px;
+	height: 148px;
+	background: url(../img/ic-explore.png) no-repeat 0 0;
+	margin: 0 auto 10px;
+}
+@media only screen and (max-width: 799px) {
+	.block#explore .eco {
+		width: 108px;
+		height: 101px;
+		background-size: cover;
+		margin-top: 80px;
+	}
 }
 /* end explore */
 
