--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -208,6 +208,16 @@ sup {
     background: linear-gradient(to bottom,  rgba(245,245,245,1) 0%,rgba(233,233,233,1) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e9e9e9',GradientType=0 ); /* IE6-9 */
 }
+.bg-blue-grad {
+    background: rgb(0,96,114); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(0,96,114,1) 0%, rgba(0,161,165,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,96,114,1)), color-stop(100%,rgba(0,161,165,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,96,114,1) 0%,rgba(0,161,165,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,96,114,1) 0%,rgba(0,161,165,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,96,114,1) 0%,rgba(0,161,165,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,96,114,1) 0%,rgba(0,161,165,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006072', endColorstr='#00A1A5',GradientType=0 ); /* IE6-9 */
+}
 .bg-grey-rdl {
     background: rgb(244,244,244); /* Old browsers */
     background: -moz-radial-gradient(center, ellipse cover,  rgba(244,244,244,1) 0%, rgba(226,226,226,1) 100%); /* FF3.6+ */
@@ -334,6 +344,200 @@ sup {
     width: 90%;
     margin: auto 5%;
 }
+.block.bg-img {
+	background-size: cover !important;
+	min-height: 0;
+}
+.block.bg-img .inner {
+	height: 100%;
+}
+/* and then... */
+
+/* #12 driving */
+.block#driving {
+	background: url(../img/bg-driving.jpg) no-repeat center center;
+}
+.block#driving .text-position.center {
+	padding-top: 25%;
+	padding-bottom: 25%;
+}
+/* #13 billion */
+#billion .number {
+	font-size: 2.6em;
+	line-height: 1em;
+}
+.block#billion .text-position p {
+	font-size: 0.8em;
+}
+@media only screen and (min-width: 480px) {
+	#billion .number {
+		font-size: 3em;
+	}
+}
+@media only screen and (min-width: 800px) {
+	#billion .number {
+		font-size: 4em;
+	}
+}
+@media only screen and (min-width: 960px) {
+	#billion .number {
+		font-size: 5em;
+	}
+}
+/* #14 applying */
+#applying ul.circles {
+	float: left;
+	width: 100%;
+	margin: 65px 0;
+	padding: 0;
+	text-align: center;
+}
+#applying ul.circles li {
+	display: inline-block;
+	margin: 0 auto 30px;
+	padding: 0;
+	width: 143px;
+	font-family: "Qualcomm-Regular", sans-serif;
+}
+#applying ul.circles li.de,
+#applying ul.circles li.ob {
+	padding: 0 57px;
+}
+#applying ul.circles .i {
+	display: block;
+	width: 143px;
+	height: 143px;
+	border-radius: 71px;
+	background-color: #006e7f;
+	margin: 0 0 30px;
+}
+#applying ul.circles .i span {
+	display: block;
+	width: 90px;
+	height: 79px;
+	background: url(../img/ic-applying.png) no-repeat 0 0;
+	background-size: cover;
+	margin: 0 auto;
+	position: relative;
+	top: 30px;
+}
+#applying ul.circles .de .i span {
+	width: 72px;
+	background-position: -90px 0;
+}
+#applying ul.circles .pe .i span {
+	width: 78px;
+	background-position: -162px 0;
+}
+#applying ul.circles .ob .i span {
+	width: 74px;
+	background-position: -240px 0;
+}
+#applying ul.circles .pl .i span {
+	width: 72px;
+	background-position: -314px 0;
+}
+/* #15 connecting */
+#connecting .circles {
+	display: block;
+	width: 60%;
+	margin: 6% auto;
+}
+#connecting .circles img {
+	width: 100%;
+	height: auto;
+}
+/* #16 digital */
+.block#digital {
+	background: url(../img/bg-digital.jpg) no-repeat center center;
+}
+.block#digital .inner {
+	height: 100%;
+}
+.block#digital .text-position {
+	padding-top: 0;
+	position: relative;
+	top: 50%;
+	left: 0;
+	margin-top: -40px;
+}
+.block#digital .graphic-position {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+#digital .eco {
+	display: block;
+	width: 51px;
+	height: 51px;
+	background: url(../img/ic-digital1.png) no-repeat 0 0;
+	background-size: cover;
+	margin: 0;
+	position: absolute;
+	top: 26.5%;
+	left: 61.7%;
+}
+#digital .eco.d2 {
+	width: 114px;
+	height: 112px;
+	background-image: url(../img/ic-digital2.png);
+	top: 59%;
+	left: 85%;
+}
+#digital .eco.d3 {
+	width: 81px;
+	height: 80px;
+	background-image: url(../img/ic-digital3.png);
+	top: 38.8%;
+	left: 53%;
+}
+.js #digital .eco,
+.js #digital h2,
+.js #digital p {
+	display: none;
+}
+.js #digital.onn h2 {
+	display: block;
+	
+	-webkit-animation:fadein 0.5s ease-in backwards;
+	-moz-animation:fadein 0.5s ease-in backwards;
+	animation:fadein 0.5s ease-in backwards;
+}
+.js #digital.onn p {
+	display: block;
+	
+	-webkit-animation:fadein 0.5s ease-in 0.5s backwards;
+	-moz-animation:fadein 0.5s ease-in 0.5s backwards;
+	animation:fadein 0.5s ease-in 0.5s backwards;
+}
+.js #digital.onn .eco {
+	display: block;
+	
+	-webkit-animation:digitaleco1 0.4s ease-in 1s backwards;
+	-moz-animation:digitaleco1 0.4s ease-in 1s backwards;
+	animation:digitaleco1 0.4s ease-in 1s backwards;
+}
+.js #digital.onn .eco.d2 {
+	-webkit-animation:digitaleco2 0.4s ease-in 1.3s backwards;
+	-moz-animation:digitaleco2 0.4s ease-in 1.3s backwards;
+	animation:digitaleco2 0.4s ease-in 1.3s backwards;
+}
+.js #digital.onn .eco.d3 {
+	-webkit-animation:digitaleco3 0.4s ease-in 1.6s backwards;
+	-moz-animation:digitaleco3 0.4s ease-in 1.6s backwards;
+	animation:digitaleco3 0.4s ease-in 1.6s backwards;
+}
+@media only screen and (max-width: 799px) {
+	.block#explore .eco {
+		width: 108px;
+		height: 101px;
+		background-size: cover;
+		margin-top: 80px;
+	}
+}
+
 /* #17 across4 */
 #across4 ul {
 	float: left;
@@ -348,6 +552,11 @@ sup {
 	margin: 0;
 	padding: 0;
 	position: relative;
+	opacity: 0.45;
+	border-top: 2px solid #fff;
+}
+#across4 li:hover, #across4 li.over {
+	opacity: 1;
 }
 #across4 img {
 	float: left;
@@ -362,10 +571,17 @@ sup {
 	position: absolute;
 	top: 50%;
 	left: 0;
-	font: 24px/100% "Qualcomm-Semibold", sans-serif;
+	font: 24px/24px "Qualcomm-Semibold", sans-serif;
 	color: #fff;
 	z-index: 2;
 	text-align: center;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+}
+#across4 .a3 .c {
+	margin-top: -12px;
+}
+#across4 .a4 .c {
+	margin-top: -24px;
 }
 @media only screen and (min-width: 600px) {
 	#across4 li {
@@ -507,11 +723,6 @@ sup {
 /* #19 explore */
 .block#explore {
 	background: url(../img/bg-explore.jpg) no-repeat center center;
-	background-size: cover;
-}
-.block#explore,
-.block#explore .inner {
-	min-height: 0;
 }
 .block#explore .text-position.center {
 	padding-top: 12%;
@@ -558,14 +769,10 @@ sup {
 		margin-top: 80px;
 	}
 }
-/* end explore */
-
 /* legal section */
-    #legal .text-position p { font-size: 0.8em; margin-bottom: 1em; }
-    #legal #logo { margin: 70px auto 30px; }
-		#legal .text-position.center { padding-top: 0; padding-bottom: 70px; }
-/* end legal */
-
+#legal .text-position p { font-size: 0.8em; margin-bottom: 1em; }
+#legal #logo { margin: 70px auto 30px; }
+#legal .text-position.center { padding-top: 0; padding-bottom: 70px; }
 
 /* ==========================================================================
    Helper classes
@@ -624,6 +831,21 @@ sup {
     @-moz-keyframes spinreverse { 100% { -moz-transform: rotate(-360deg); } }
     @-webkit-keyframes spinreverse { 100% { -webkit-transform: rotate(-360deg); } }
     @keyframes spinreverse { 100% { transform: rotate(-360deg); } }
+		
+		/* digital ecosystems */
+    @-moz-keyframes digitaleco { 0% { opacity: 0; width: 0; height: 0; -moz-transform: rotate(180deg); } 100% { width: 51px; height: 81px; opacity: 1; -moz-transform: rotate(360deg); } }
+    @-webkit-keyframes digitaleco { 0% { opacity: 0; width: 0; height: 0; -webkit-transform: rotate(180deg); } 100% { width: 51px; height: 81px; opacity: 1; -webkit-transform: rotate(360deg); } }
+    @keyframes digitaleco { 0% { opacity: 0; width: 0; height: 0; transform: rotate(180deg); } 100% { width: 51px; height: 81px; opacity: 1; transform: rotate(360deg); } }
+		
+    @-moz-keyframes digitaleco1 { 0% { width: 0; height: 0; } 100% { width: 51px; height: 51px; } }
+    @-webkit-keyframes digitaleco1 { 0% { width: 0; height: 0; } 100% { width: 51px; height: 51px; } }
+    @keyframes digitaleco1 { 0% { width: 0; height: 0; } 100% { width: 51px; height: 51px; } }
+    @-moz-keyframes digitaleco2 { 0% { width: 0; height: 0; } 100% { width: 81px; height: 80px; } }
+    @-webkit-keyframes digitaleco2 { 0% { width: 0; height: 0; } 100% { width: 81px; height: 80px; } }
+    @keyframes digitaleco2 { 0% { width: 0; height: 0; } 100% { width: 81px; height: 80px; } }
+    @-moz-keyframes digitaleco3 { 0% { width: 0; height: 0; } 100% { width: 114px; height: 112px; } }
+    @-webkit-keyframes digitaleco3 { 0% { width: 0; height: 0; } 100% { width: 114px; height: 112px; } }
+    @keyframes digitaleco3 { 0% { width: 0; height: 0; } 100% { width: 114px; height: 112px; } }
 		
 		/* explore ecosystem movement */
     @-moz-keyframes exploreeco { 0% { opacity: 0; width: 0; height: 0; -moz-transform: rotate(180deg); } 100% { width: 158px; height: 148px; opacity: 1; -moz-transform: rotate(360deg); } }
